--- a/index.html
+++ b/index.html
@@ -140,7 +140,8 @@
       showMessage('Uploading...', '');
 
       try {
-        const response = await fetch('https://your-cloudflare-worker-url.workers.dev', {
+
+        const response = await fetch('https://upload-ui.pages.dev/api/upload', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ rows: parsedData })
@@ -161,3 +162,4 @@
   </script>
 </body>
 </html>
+
