--- a/index.html
+++ b/index.html
@@ -2,56 +2,42 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Inventory CSV Upload</title>
-  <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Upload Inventory CSV</title>
   <style>
     body {
-      font-family: sans-serif;
-      background: #f9f9f9;
-      padding: 2rem;
-      max-width: 600px;
-      margin: auto;
+      font-family: Arial, sans-serif;
+      margin: 2rem;
     }
-    .drop-zone {
+
+    #drop-area {
       border: 2px dashed #999;
       padding: 2rem;
       text-align: center;
-      color: #666;
-      cursor: pointer;
-      background: white;
+      margin-bottom: 1rem;
     }
-    .drop-zone.dragover {
-      background-color: #eef;
-    }
+
     table {
-      margin-top: 1rem;
-      width: 100%;
       border-collapse: collapse;
+      width: 100%;
     }
-    table, th, td {
-      border: 1px solid #ddd;
-    }
+
     th, td {
+      border: 1px solid #ccc;
       padding: 8px;
-      text-align: left;
     }
+
+    #message {
+      margin-bottom: 1rem;
+      color: red;
+    }
+
     .success {
       color: green;
     }
+
     .error {
       color: red;
-    }
-    button {
-      margin-top: 1rem;
-      padding: 0.5rem 1rem;
-      background: #007bff;
-      color: white;
-      border: none;
-      cursor: pointer;
-    }
-    button:disabled {
-      background: #aaa;
     }
   </style>
 </head>
@@ -61,80 +47,89 @@
     <code>sku_code, batch_no, barcode, date_in, warranty_months</code>
   </p>
 
-  <div id="dropZone" class="drop-zone">Drag and drop your CSV here or click to select</div>
-
-  <input type="file" id="fileInput" accept=".csv" style="display: none" />
+  <div id="drop-area">Drag and drop your CSV here or click to select</div>
   <div id="message"></div>
-  <table id="previewTable" style="display: none"></table>
-  <button id="uploadBtn" disabled>Upload to Supabase</button>
+  <div id="preview"></div>
+  <button id="uploadBtn">Upload to Supabase</button>
+
+  <input type="file" id="fileElem" accept=".csv" style="display:none" />
 
   <script>
-    const dropZone = document.getElementById('dropZone');
-    const fileInput = document.getElementById('fileInput');
+    const dropArea = document.getElementById('drop-area');
+    const fileElem = document.getElementById('fileElem');
+    const preview = document.getElementById('preview');
     const message = document.getElementById('message');
-    const previewTable = document.getElementById('previewTable');
     const uploadBtn = document.getElementById('uploadBtn');
     let parsedData = [];
-
-    dropZone.addEventListener('click', () => fileInput.click());
-
-    dropZone.addEventListener('dragover', (e) => {
-      e.preventDefault();
-      dropZone.classList.add('dragover');
-    });
-
-    dropZone.addEventListener('dragleave', () => {
-      dropZone.classList.remove('dragover');
-    });
-
-    dropZone.addEventListener('drop', (e) => {
-      e.preventDefault();
-      dropZone.classList.remove('dragover');
-      handleFile(e.dataTransfer.files[0]);
-    });
-
-    fileInput.addEventListener('change', (e) => {
-      handleFile(e.target.files[0]);
-    });
-
-    function handleFile(file) {
-      if (!file.name.endsWith('.csv')) {
-        showMessage('Only .csv files are accepted.', 'error');
-        return;
-      }
-
-      Papa.parse(file, {
-        header: true,
-        skipEmptyLines: true,
-        complete: (results) => {
-          parsedData = results.data;
-          if (!parsedData.length) {
-            showMessage('CSV appears to be empty.', 'error');
-            return;
-          }
-          previewData(parsedData);
-          showMessage(`Parsed ${parsedData.length} rows. Ready to upload.`, 'success');
-          uploadBtn.disabled = false;
-        },
-        error: (err) => {
-          showMessage('Error parsing CSV: ' + err.message, 'error');
-        }
-      });
-    }
-
-    function previewData(data) {
-      previewTable.style.display = 'table';
-      const keys = Object.keys(data[0]);
-      previewTable.innerHTML = `<thead><tr>${keys.map(k => `<th>${k}</th>`).join('')}</tr></thead>`;
-      const previewRows = data.slice(0, 5).map(row => {
-        return `<tr>${keys.map(k => `<td>${row[k]}</td>`).join('')}</tr>`;
-      }).join('');
-      previewTable.innerHTML += `<tbody>${previewRows}</tbody>`;
-    }
 
     function showMessage(text, type) {
       message.textContent = text;
       message.className = type;
+    }
+
+    dropArea.addEventListener('click', () => fileElem.click());
+
+    dropArea.addEventListener('dragover', (e) => {
+      e.preventDefault();
+      dropArea.style.backgroundColor = '#eee';
+    });
+
+    dropArea.addEventListener('dragleave', () => {
+      dropArea.style.backgroundColor = '';
+    });
+
+    dropArea.addEventListener('drop', (e) => {
+      e.preventDefault();
+      dropArea.style.backgroundColor = '';
+      const file = e.dataTransfer.files[0];
+      handleFile(file);
+    });
+
+    fileElem.addEventListener('change', (e) => {
+      const file = e.target.files[0];
+      handleFile(file);
+    });
+
+    function handleFile(file) {
+      const reader = new FileReader();
+      reader.onload = () => {
+        const lines = reader.result.trim().split('\n');
+        const headers = lines[0].split(',').map(h => h.trim());
+        parsedData = lines.slice(1).map(line => {
+          const values = line.split(',').map(v => v.trim());
+          const obj = {};
+          headers.forEach((h, i) => obj[h] = values[i]);
+          return obj;
+        });
+
+        // Show preview table
+        const table = document.createElement('table');
+        const thead = document.createElement('thead');
+        const tr = document.createElement('tr');
+        headers.forEach(h => {
+          const th = document.createElement('th');
+          th.textContent = h;
+          tr.appendChild(th);
+        });
+        thead.appendChild(tr);
+        table.appendChild(thead);
+
+        const tbody = document.createElement('tbody');
+        parsedData.forEach(row => {
+          const tr = document.createElement('tr');
+          headers.forEach(h => {
+            const td = document.createElement('td');
+            td.textContent = row[h];
+            tr.appendChild(td);
+          });
+          tbody.appendChild(tr);
+        });
+        table.appendChild(tbody);
+
+        preview.innerHTML = '';
+        preview.appendChild(table);
+      };
+      reader.readAsText(file);
     }
 
     uploadBtn.addEventListener('click', async () => {
@@ -142,16 +137,23 @@
       showMessage('Uploading...', '');
 
       try {
-        const formData = new FormData();
-        const blob = new Blob([Papa.unparse(parsedData)], { type: 'text/csv' });
-        formData.append('file', blob, 'data.csv');
-
         const response = await fetch('https://upload-ui.pages.dev/api/upload', {
           method: 'POST',
-          body: formData
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ rows: parsedData }),
         });
 
-        const result = await response.json();
+        const text = await response.text(); // ⬅️ Grab raw text first
+
+        let result;
+        try {
+          result = JSON.parse(text); // ⬅️ Try to parse only if it's valid JSON
+        } catch (err) {
+          showMessage('Upload failed: Invalid JSON response', 'error');
+          console.error('🧨 Raw response:', text);
+          return;
+        }
+
         if (response.ok) {
           showMessage(`Upload successful! ${result.message || ''}`, 'success');
         } else {
