--- a/index.html
+++ b/index.html
@@ -1,169 +1,171 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Upload Inventory CSV</title>
-    <style>
-      body {
-        background-color: #1e1e1e;
-        color: #fff;
-        font-family: 'Segoe UI', sans-serif;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding: 2rem;
-      }
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Upload Inventory CSV</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 2rem;
+    }
 
-      h1 {
-        font-size: 2rem;
-        margin-bottom: 1.5rem;
-      }
+    #drop-area {
+      border: 2px dashed #999;
+      padding: 2rem;
+      text-align: center;
+      margin-bottom: 1rem;
+    }
 
-      input[type="file"] {
-        margin-bottom: 1rem;
-      }
+    table {
+      border-collapse: collapse;
+      width: 100%;
+      margin-top: 1rem;
+    }
 
-      button {
-        background-color: #4caf50;
-        color: white;
-        padding: 0.5rem 1rem;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        margin-bottom: 1rem;
-      }
+    th, td {
+      border: 1px solid #ccc;
+      padding: 8px;
+      text-align: left;
+    }
 
-      button:hover {
-        background-color: #45a049;
-      }
+    #message {
+      margin-bottom: 1rem;
+      font-weight: bold;
+    }
 
-      #status {
-        font-weight: bold;
-        margin-bottom: 1rem;
-      }
+    .success {
+      color: green;
+    }
 
-      .success {
-        color: #00e676;
-      }
+    .error {
+      color: red;
+    }
+  </style>
+</head>
+<body>
+  <h2>Upload Inventory CSV</h2>
+  <p>Please upload a .csv file with the following columns:<br>
+    <code>sku_code, batch_no, barcode, date_in, warranty_months</code>
+  </p>
 
-      .error {
-        color: #ff5252;
-      }
+  <div id="drop-area">Drag and drop your CSV here or click to select</div>
+  <div id="message"></div>
+  <div id="preview"></div>
+  <button id="uploadBtn">Upload to Supabase</button>
 
-      table {
-        width: 100%;
-        max-width: 700px;
-        border-collapse: collapse;
-        margin-top: 1rem;
-      }
+  <input type="file" id="fileElem" accept=".csv" style="display:none" />
 
-      th, td {
-        border: 1px solid #555;
-        padding: 8px;
-        text-align: left;
-      }
+  <script>
+    const dropArea = document.getElementById('drop-area');
+    const fileElem = document.getElementById('fileElem');
+    const preview = document.getElementById('preview');
+    const message = document.getElementById('message');
+    const uploadBtn = document.getElementById('uploadBtn');
+    let parsedData = [];
 
-      th {
-        background-color: #333;
-      }
+    function showMessage(text, type) {
+      message.textContent = text;
+      message.className = type;
+    }
 
-      td {
-        background-color: #2a2a2a;
-      }
+    dropArea.addEventListener('click', () => fileElem.click());
 
-      #previewTitle {
-        margin-top: 2rem;
-        font-size: 1.2rem;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>Upload Inventory CSV</h1>
-    <input type="file" id="csvFile" accept=".csv" />
-    <button id="uploadBtn">Upload</button>
+    dropArea.addEventListener('dragover', (e) => {
+      e.preventDefault();
+      dropArea.style.backgroundColor = '#eee';
+    });
 
-    <div id="status"></div>
-    <div id="previewTitle"></div>
-    <table id="previewTable"></table>
+    dropArea.addEventListener('dragleave', () => {
+      dropArea.style.backgroundColor = '';
+    });
 
-    <script type="module">
-      import Papa from "https://cdn.jsdelivr.net/npm/papaparse@5.4.1/+esm";
-      import { SUPABASE_URL, SUPABASE_KEY } from "./upload.ts";
+    dropArea.addEventListener('drop', (e) => {
+      e.preventDefault();
+      dropArea.style.backgroundColor = '';
+      const file = e.dataTransfer.files[0];
+      handleFile(file);
+    });
 
-      const fileInput = document.getElementById("csvFile");
-      const uploadBtn = document.getElementById("uploadBtn");
-      const statusBox = document.getElementById("status");
-      const previewTable = document.getElementById("previewTable");
-      const previewTitle = document.getElementById("previewTitle");
+    fileElem.addEventListener('change', (e) => {
+      const file = e.target.files[0];
+      handleFile(file);
+    });
 
-      let file;
+    function handleFile(file) {
+      const reader = new FileReader();
+      reader.onload = () => {
+        const lines = reader.result.trim().split('\n');
+        const headers = lines[0].split(',').map(h => h.trim());
+        parsedData = lines.slice(1).map(line => {
+          const values = line.split(',').map(v => v.trim());
+          const obj = {};
+          headers.forEach((h, i) => obj[h] = values[i]);
+          return obj;
+        });
 
-      fileInput.addEventListener("change", (e) => {
-        file = e.target.files[0];
-      });
+        // Show preview table
+        const table = document.createElement('table');
+        const thead = document.createElement('thead');
+        const tr = document.createElement('tr');
+        headers.forEach(h => {
+          const th = document.createElement('th');
+          th.textContent = h;
+          tr.appendChild(th);
+        });
+        thead.appendChild(tr);
+        table.appendChild(thead);
 
-      uploadBtn.addEventListener("click", async () => {
-        if (!file) {
-          statusBox.textContent = "❗ Please select a CSV file.";
-          statusBox.className = "error";
+        const tbody = document.createElement('tbody');
+        parsedData.slice(0, 10).forEach(row => {
+          const tr = document.createElement('tr');
+          headers.forEach(h => {
+            const td = document.createElement('td');
+            td.textContent = row[h];
+            tr.appendChild(td);
+          });
+          tbody.appendChild(tr);
+        });
+        table.appendChild(tbody);
+
+        preview.innerHTML = '';
+        preview.appendChild(table);
+      };
+      reader.readAsText(file);
+    }
+
+    uploadBtn.addEventListener('click', async () => {
+      uploadBtn.disabled = true;
+      showMessage('Uploading...', '');
+
+      try {
+        const response = await fetch('https://upload-ui.pages.dev/api/upload', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ rows: parsedData }),
+        });
+
+        const text = await response.text();
+        let result;
+        try {
+          result = JSON.parse(text);
+        } catch (err) {
+          showMessage('Upload failed: Invalid JSON response', 'error');
+          console.error('🧨 Raw response:', text);
           return;
         }
 
-        Papa.parse(file, {
-          header: true,
-          skipEmptyLines: true,
-          complete: async function (results) {
-            const rows = results.data;
-
-            // Preview
-            previewTitle.textContent = "📄 Preview (first 5 rows):";
-            const previewRows = rows.slice(0, 5);
-            const headers = Object.keys(previewRows[0]);
-
-            // Clear previous content
-            previewTable.innerHTML = "";
-
-            // Build table headers
-            const headerRow = document.createElement("tr");
-            headers.forEach((header) => {
-              const th = document.createElement("th");
-              th.textContent = header;
-              headerRow.appendChild(th);
-            });
-            previewTable.appendChild(headerRow);
-
-            // Add data rows
-            previewRows.forEach((row) => {
-              const tr = document.createElement("tr");
-              headers.forEach((header) => {
-                const td = document.createElement("td");
-                td.textContent = row[header] || "";
-                tr.appendChild(td);
-              });
-              previewTable.appendChild(tr);
-            });
-
-            // Upload
-            const response = await fetch("./upload.ts", {
-              method: "POST",
-              headers: { "Content-Type": "application/json" },
-              body: JSON.stringify({ rows }),
-            });
-
-            const result = await response.json();
-
-            if (response.ok && !result.error) {
-              statusBox.textContent = "✅ Upload successful!";
-              statusBox.className = "success";
-            } else {
-              statusBox.textContent =
-                "❌ Upload failed: " +
-                (result?.error?.message || response.statusText);
-              statusBox.className = "error";
-            }
-          },
-        });
-      });
-    </script>
-  </body>
+        if (response.ok) {
+          showMessage(`Upload successful! ${result.message || ''}`, 'success');
+        } else {
+          showMessage(`Upload failed: ${result.error || 'Unknown error'}`, 'error');
+        }
+      } catch (err) {
+        showMessage('Error uploading data: ' + err.message, 'error');
+      } finally {
+        uploadBtn.disabled = false;
+      }
+    });
+  </script>
+</body>
 </html>
