--- a/index.html
+++ b/index.html
@@ -267,4 +267,16 @@
     });
   </script>
 </body>
+
+  <!-- 🔐 Password Prompt Overlay -->
+<div id="auth-overlay">
+  <div class="auth-box">
+    <h3>🔐 Enter Password</h3>
+    <input id="auth-password" type="password" placeholder="Password" autocomplete="current-password" />
+    <button id="auth-submit" type="button">Submit</button>
+    <p id="auth-error"></p>
+  </div>
+</div>
+
 </html>
+
