--- a/index.html
+++ b/index.html
@@ -235,12 +235,12 @@
       errorsDiv.innerHTML = '';
 
       try {
-        const response = await fetch('https://upload-ui.pages.dev/api/upload', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          // Now expecting brand_name too
-          body: JSON.stringify({ rows: parsedData }),
-        });
+              const response = await fetch('/upload', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ rows: parsedData }),
+      });
+
 
         const text = await response.text();
         let result;
@@ -268,5 +268,6 @@
   </script>
 </body>
 </html>
+
 
 
